--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slix-cli",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Generator Slix project",
   "main": "bin/cli.js",
   "preferGlobal": true,
@@ -8,7 +8,8 @@
     "slix-cli": "bin/cli.js"
   },
   "scripts": {
-    "test": "node bin/cli.js"
+    "test": "node bin/cli.js",
+    "publish": "node utils/version.js && git add . && git commit -m 'Changlog update' && git push && npm publish"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,7 @@
   "homepage": "https://github.com/M4MIND/Slix-cli#readme",
   "devDependencies": {
     "slix": "git+https://github.com/M4MIND/Slix.git",
-    "slix-app": "0.0.2"
+    "slix-app": "^1.0.6"
   },
   "dependencies": {
     "commander": "^2.20.0",
