--- a/templates/.babelrc
+++ b/templates/.babelrc
@@ -10,5 +10,8 @@
       }
     ]
   ],
-  "plugins": [["@babel/plugin-proposal-class-properties"]]
+  "plugins": [
+    ["@babel/plugin-proposal-class-properties"],
+    ["inline-json-import"]
+  ]
 }
